# pgorm

./: .env.example  .gitignore  AI_USAGE.md  Cargo.toml  DESIGN_CRUD.md  README.md  README.zh-CN.md  llms.txt
.github/workflows/: ci.yml
crates/pgorm/: Cargo.toml
crates/pgorm-check/: Cargo.toml
crates/pgorm-check/benches/: sql_parse_cache.rs
crates/pgorm-check/examples/: sql_check.rs  sql_lint.rs
crates/pgorm-check/src/: client.rs  error.rs  lib.rs  schema_cache.rs  schema_introspect.rs  sql_analysis.rs  sql_check.rs  sql_lint.rs  sql_rewrite.rs
crates/pgorm-cli/: Cargo.toml
crates/pgorm-cli/examples/model_codegen_relations/: main.rs
crates/pgorm-cli/src/: analyze.rs  cli.rs  codegen.rs  config.rs  gen_check.rs  generate.rs  init.rs  lib.rs  main.rs  migrate_cmd.rs  model_codegen.rs  model_generate.rs  queries.rs  schema.rs  sql_check.rs  sql_validate.rs  type_mapper.rs  workflow.rs  write.rs
crates/pgorm-derive/: Cargo.toml
crates/pgorm-derive/src/: from_row.rs  insert_model.rs  lib.rs  model.rs  pg_composite.rs  pg_enum.rs  query_params.rs  sql_ident.rs  update_model.rs
crates/pgorm-derive/src/common/: mod.rs  syn_types.rs
crates/pgorm-derive/src/insert_model/: attrs.rs  gen_base.rs  gen_graph.rs  graph_decl.rs  graph_parse.rs  setters.rs
crates/pgorm/benches/: lru_cache.rs  sql_builder.rs
crates/pgorm/examples/: basic.rs  batch_crud_derive.rs  builder.rs  changeset_input.rs  check.rs  checked_client.rs  comprehensive.rs  crud_derive.rs  dynamic_sql.rs  eager_loading.rs  hooks.rs  join_view.rs  migrate.rs  model_check.rs  model_methods.rs  monitor.rs  pg_client.rs  query_struct.rs  relations.rs  transaction.rs  transaction_pool.rs  update_model.rs
crates/pgorm/examples/bulk_operations/: main.rs
crates/pgorm/examples/bulk_optimistic_locking/: main.rs
crates/pgorm/examples/changeset/: main.rs
crates/pgorm/examples/changeset/common/: mod.rs
crates/pgorm/examples/composite_primary_key/: main.rs
crates/pgorm/examples/cte_queries/: main.rs
crates/pgorm/examples/eager_loading/: main.rs
crates/pgorm/examples/eager_loading/common/: schema.rs
crates/pgorm/examples/fetch_semantics/: main.rs
crates/pgorm/examples/input_as_nested_option/: main.rs
crates/pgorm/examples/insert_many/: main.rs
crates/pgorm/examples/insert_many_array/: main.rs
crates/pgorm/examples/jsonb/: main.rs
crates/pgorm/examples/keyset_pagination/: main.rs
crates/pgorm/examples/keyset_pagination_multi/: main.rs
crates/pgorm/examples/listen_notify/: main.rs
crates/pgorm/examples/migrate/: main.rs
crates/pgorm/examples/migrate/migrations/: V1__create_products.sql  V2__create_categories.sql
crates/pgorm/examples/migration_toolchain/: main.rs
crates/pgorm/examples/monitoring/: main.rs
crates/pgorm/examples/optimistic_locking/: main.rs
crates/pgorm/examples/optimistic_locking/common/: output.rs  schema.rs
crates/pgorm/examples/pg_client/: main.rs
crates/pgorm/examples/pg_composite/: main.rs
crates/pgorm/examples/pg_enum/: main.rs
crates/pgorm/examples/pg_range/: main.rs
crates/pgorm/examples/productized_limits/: main.rs
crates/pgorm/examples/query_params/: main.rs
crates/pgorm/examples/query_params_multi_ops/: main.rs
crates/pgorm/examples/savepoint/: main.rs
crates/pgorm/examples/sql_builder/: main.rs
crates/pgorm/examples/statement_cache/: main.rs
crates/pgorm/examples/streaming/: main.rs
crates/pgorm/examples/transaction_options/: main.rs
crates/pgorm/examples/update_model/: main.rs
crates/pgorm/examples/upsert/: main.rs
crates/pgorm/examples/write_graph/: main.rs
crates/pgorm/src/: builder.rs  bulk.rs  changeset.rs  check.rs  checked_client.rs  client.rs  condition.rs  cte.rs  eager.rs  error.rs  ident.rs  lib.rs  listen.rs  migrate.rs  monitor.rs  pg_client.rs  pool.rs  prelude.rs  qb.rs  query.rs  row.rs  sql.rs  transaction.rs  validate.rs
crates/pgorm/src/builder/: delete.rs  insert.rs  mod.rs  select.rs  table.rs  tests.rs  traits.rs  update.rs  where_builder.rs
crates/pgorm/src/check/: lint.rs  mod.rs  registry.rs  tests.rs
crates/pgorm/src/monitor/: config.rs  instrumented.rs  mod.rs  monitors.rs  stream.rs  tests.rs  tracing_hook.rs  types.rs
crates/pgorm/src/pg_client/: check.rs  config.rs  execute.rs  mod.rs  statement_cache.rs  stream.rs  tests.rs
crates/pgorm/src/qb/: delete.rs  expr.rs  insert.rs  mod.rs  param.rs  select.rs  tests.rs  traits.rs  update.rs
crates/pgorm/src/sql/: builder.rs  exec_macros.rs  mod.rs  parts.rs  query.rs  stream.rs  tests.rs
crates/pgorm/src/types/: mod.rs  range.rs
crates/pgorm/tests/: changeset_input.rs  compile_check.rs  eager_loading.rs  listen_notify.rs  multi_table_writes.rs  optimistic_locking.rs  query_params.rs  transaction_options.rs
docs/: cookbook.md  package.json  rspress.config.ts
docs/design/: README.md  auto-timestamps.md  changeset-input-macro.md  changeset-validation.md  codegen-cli.md  composable-queries.md  eager-loading.md  eager-loading.todo.md  lifecycle-hooks.md  multi-table-writes-final.md  multi-table-writes.md  optimizations.todo.md  pgorm-derive-modularization.md  query-runtime-upgrades.md
docs/docs/en/: _nav.json  index.md
docs/docs/en/guide/: _meta.json  (+30 more)
docs/docs/zh/: _nav.json  index.md
spec/: 00-ai-first-roadmap.md  00-plan-maintainability-split-modules.md  01-plan-api-design.md  02-plan-performance-cache-lock.md  03-plan-docs-and-examples.md  04-plan-composite-primary-key.md  05-plan-transaction-level-config.md  06-plan-migration-toolchain.md  07-plan-model-codegen-relations-write-models.md  08-plan-pagination-expansion.md  09-plan-productize-known-limitations.md  10-plan-pg-listen-notify.md  40-core-inet-ipaddr.md  41-core-query-optional-filters.md  46-core-condition-operator-extensions.md  47-ai-runtime-manifest-allowlist.md  48-core-optimistic-locking.md  49-core-aggregate-queries.md  50-core-bulk-operations.md  51-core-cte-queries.md  52-core-pg-special-types.md  53-core-transaction-enhancements.md  54-cli-schema-generation.md  55-derive-field-modifiers.md  CODE_REVIEW.md  README.md  pgorm-cli.md  pgorm-examples.md
(+42 files in other folders)
