[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# Internal crates
pgorm = { path = "crates/pgorm" }
pgorm-derive = { path = "crates/pgorm-derive", version = "0.2.0" }
pgorm-check = { path = "crates/pgorm-check", version = "0.2.0" }

# External dependencies
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14.1" }
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
rust_decimal = "1.40.0"
time = "0.3.46"
cidr = "0.3.2"
geo-types = "0.7.18"
eui48 = "1.1.0"
bit-vec = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
regex = "1.12.2"
url = "2.5.8"
async-trait = "0.1.89"
pg_query = "6.1.1"
inventory = "0.3.21"
tracing = "0.1.44"
dotenvy = "0.15"
anyhow = "1.0.100"
glob = "0.3.3"
heck = "0.5.0"
toml = "0.9.11"

# Proc macro dependencies
syn = { version = "2.0.114", features = ["full"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"

# CLI / formatting
colored = "3.0.0"
comfy-table = "7.2.1"
bytes = "1.10.1"
criterion = { version = "0.5", features = ["html_reports"] }
