[package]
name = "pgorm-check"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime SQL vs schema checks for pgorm (with optional local schema cache)"

[dependencies]
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait = "0.1"

[features]
default = []

# Enable SQL parsing via libpg_query bindings.
sql = ["dep:pg_query"]

[dependencies.pg_query]
version = "6.1"
optional = true

[dev-dependencies]
tokio.workspace = true
dotenvy = "0.15"
colored = "2"
deadpool-postgres.workspace = true
async-trait = "0.1"

[[example]]
name = "sql_check"
required-features = ["sql"]

[[example]]
name = "sql_lint"
required-features = ["sql"]
