[package]
name = "pgorm-check"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Runtime SQL vs schema checks for pgorm (with optional local schema cache)"

[dependencies]
tokio-postgres.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[features]
default = []

# Enable SQL parsing via libpg_query bindings.
sql = ["dep:pg_query"]

[dependencies.pg_query]
workspace = true
optional = true

[dev-dependencies]
tokio.workspace = true
dotenvy.workspace = true
colored.workspace = true
deadpool-postgres.workspace = true
async-trait.workspace = true

[[example]]
name = "sql_check"
required-features = ["sql"]

[[example]]
name = "sql_lint"
required-features = ["sql"]
