[package]
name = "pgorm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL codegen CLI for pgorm"

[[bin]]
name = "pgorm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
heck = "0.5.0"
pg_query = "6.1"
pgorm-check = { workspace = true, features = ["sql"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
toml = "0.8.23"
