[package]
name = "pgorm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SQL codegen CLI for pgorm"

[[bin]]
name = "pgorm"
path = "src/main.rs"
# Avoid `cargo doc --workspace` output collisions with the `pgorm` library crate.
doc = false

[[example]]
name = "model_codegen_relations"
path = "examples/model_codegen_relations/main.rs"

[dependencies]
anyhow.workspace = true
glob.workspace = true
heck.workspace = true
pg_query.workspace = true
pgorm = { path = "../pgorm", default-features = false, features = ["migrate"] }
pgorm-check = { workspace = true, features = ["sql"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
toml.workspace = true
