[package]
name = "pgorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A lightweight Postgres-only ORM for Rust"

[dependencies]
tokio-postgres.workspace = true
tokio = { workspace = true, features = ["time"] }
deadpool-postgres = { workspace = true, optional = true }
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = { version = "0.1.44", optional = true }
regex = { workspace = true, optional = true }
url = { workspace = true, optional = true }
pgorm-derive = { workspace = true, optional = true }
pgorm-check = { workspace = true, features = ["sql"], optional = true }
inventory = "0.3"
refinery = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
colored.workspace = true
comfy-table.workspace = true

[features]
default = ["pool", "derive", "check", "validate"]

pool = ["deadpool-postgres"]
derive = ["pgorm-derive"]

# SQL schema checking and linting (via pgorm-check)
check = ["pgorm-check"]

# Changeset-style validation helpers (email/url/regex/etc)
validate = ["dep:regex", "dep:url"]

# SQL migrations (via refinery)
migrate = ["dep:refinery"]

# Emit SQL debug logs via `tracing` (adds `TracingSqlHook`).
tracing = ["dep:tracing"]

[[example]]
name = "migrate"
path = "examples/migrate/main.rs"
required-features = ["migrate", "pool"]

[[example]]
name = "changeset"
path = "examples/changeset/main.rs"

[[example]]
name = "eager_loading"
path = "examples/eager_loading/main.rs"

[[example]]
name = "pg_client"
path = "examples/pg_client/main.rs"

[[example]]
name = "update_model"
path = "examples/update_model/main.rs"

[[example]]
name = "sql_builder"
path = "examples/sql_builder/main.rs"

[[example]]
name = "insert_many"
path = "examples/insert_many/main.rs"

[[example]]
name = "upsert"
path = "examples/upsert/main.rs"

[[example]]
name = "write_graph"
path = "examples/write_graph/main.rs"

[[example]]
name = "monitoring"
path = "examples/monitoring/main.rs"

[[example]]
name = "jsonb"
path = "examples/jsonb/main.rs"

[[example]]
name = "fetch_semantics"
path = "examples/fetch_semantics/main.rs"

[[example]]
name = "query_params"
path = "examples/query_params/main.rs"
required-features = ["derive"]
