[package]
name = "pgorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A lightweight Postgres-only ORM for Rust"

[dependencies]
tokio-postgres.workspace = true
tokio = { workspace = true, features = ["time"] }
deadpool-postgres = { workspace = true, optional = true }
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
cidr = { workspace = true, optional = true }
geo-types = { workspace = true, optional = true }
eui48 = { workspace = true, optional = true }
bit-vec = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
url = { workspace = true, optional = true }
pgorm-derive = { workspace = true, optional = true }
pgorm-check = { workspace = true, features = ["sql"], optional = true }
inventory.workspace = true
refinery = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dotenvy.workspace = true
colored.workspace = true
comfy-table.workspace = true

[features]
default = ["pool", "derive", "check", "validate"]

pool = ["deadpool-postgres"]
derive = ["pgorm-derive"]

# SQL schema checking and linting (via pgorm-check)
check = ["pgorm-check"]

# Changeset-style validation helpers (email/url/regex/etc)
validate = ["dep:regex", "dep:url"]

# rust_decimal::Decimal support for UNNEST casts in batch operations.
rust_decimal = ["dep:rust_decimal"]

# time crate support for UNNEST casts and tokio-postgres conversions.
time = ["dep:time", "tokio-postgres/with-time-0_3"]

# cidr crate support for UNNEST casts and tokio-postgres conversions.
cidr = ["dep:cidr", "tokio-postgres/with-cidr-0_3"]

# geo-types crate support for UNNEST casts and tokio-postgres conversions.
geo_types = ["dep:geo-types", "tokio-postgres/with-geo-types-0_7"]

# eui48 crate support for UNNEST casts and tokio-postgres conversions.
eui48 = ["dep:eui48", "tokio-postgres/with-eui48-1"]

# bit-vec crate support for UNNEST casts and tokio-postgres conversions.
bit_vec = ["dep:bit-vec", "tokio-postgres/with-bit-vec-0_8"]

# Convenience feature to enable common extra scalar types.
extra_types = ["rust_decimal", "time", "cidr", "geo_types", "eui48", "bit_vec"]

# SQL migrations (via refinery)
migrate = ["dep:refinery"]

# Emit SQL debug logs via `tracing` (adds `TracingSqlHook`).
tracing = ["dep:tracing"]

[[example]]
name = "migrate"
path = "examples/migrate/main.rs"
required-features = ["migrate", "pool"]

[[example]]
name = "changeset"
path = "examples/changeset/main.rs"

[[example]]
name = "eager_loading"
path = "examples/eager_loading/main.rs"

[[example]]
name = "pg_client"
path = "examples/pg_client/main.rs"

[[example]]
name = "update_model"
path = "examples/update_model/main.rs"

[[example]]
name = "sql_builder"
path = "examples/sql_builder/main.rs"

[[example]]
name = "insert_many"
path = "examples/insert_many/main.rs"

[[example]]
name = "upsert"
path = "examples/upsert/main.rs"

[[example]]
name = "write_graph"
path = "examples/write_graph/main.rs"

[[example]]
name = "monitoring"
path = "examples/monitoring/main.rs"

[[example]]
name = "jsonb"
path = "examples/jsonb/main.rs"

[[example]]
name = "fetch_semantics"
path = "examples/fetch_semantics/main.rs"

[[example]]
name = "query_params"
path = "examples/query_params/main.rs"
required-features = ["derive"]
