[package]
name = "pgorm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A model-definition-first, AI-friendly PostgreSQL ORM for Rust"

[dependencies]
futures-core.workspace = true
tokio-postgres.workspace = true
tokio = { workspace = true, features = ["time"] }
deadpool-postgres = { workspace = true, optional = true }
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
cidr = { workspace = true, optional = true }
geo-types = { workspace = true, optional = true }
eui48 = { workspace = true, optional = true }
bit-vec = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
url = { workspace = true, optional = true }
pgorm-derive = { workspace = true, optional = true }
pgorm-check = { workspace = true, features = ["sql"], optional = true }
inventory.workspace = true
bytes.workspace = true
refinery = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dotenvy.workspace = true
colored.workspace = true
comfy-table.workspace = true
futures-util.workspace = true
criterion.workspace = true

[[bench]]
name = "sql_builder"
harness = false

[[bench]]
name = "lru_cache"
harness = false

[features]
default = ["pool", "derive", "check", "validate"]

pool = ["deadpool-postgres"]
derive = ["pgorm-derive"]

# SQL schema checking and linting (via pgorm-check)
check = ["pgorm-check"]

# Changeset-style validation helpers (email/url/regex/etc)
validate = ["dep:regex", "dep:url"]

# rust_decimal::Decimal support for UNNEST casts in batch operations.
rust_decimal = ["dep:rust_decimal"]

# time crate support for UNNEST casts and tokio-postgres conversions.
time = ["dep:time", "tokio-postgres/with-time-0_3"]

# cidr crate support for UNNEST casts and tokio-postgres conversions.
cidr = ["dep:cidr", "tokio-postgres/with-cidr-0_3"]

# geo-types crate support for UNNEST casts and tokio-postgres conversions.
geo_types = ["dep:geo-types", "tokio-postgres/with-geo-types-0_7"]

# eui48 crate support for UNNEST casts and tokio-postgres conversions.
eui48 = ["dep:eui48", "tokio-postgres/with-eui48-1"]

# bit-vec crate support for UNNEST casts and tokio-postgres conversions.
bit_vec = ["dep:bit-vec", "tokio-postgres/with-bit-vec-0_8"]

# Convenience feature to enable common extra scalar types.
extra_types = ["rust_decimal", "time", "cidr", "geo_types", "eui48", "bit_vec"]

# SQL migrations (via refinery)
migrate = ["dep:refinery"]

# Emit SQL debug logs via `tracing` (adds `TracingSqlHook`).
tracing = ["dep:tracing"]

[[example]]
name = "migrate"
path = "examples/migrate/main.rs"
required-features = ["migrate", "pool"]

[[example]]
name = "migration_toolchain"
path = "examples/migration_toolchain/main.rs"
required-features = ["migrate"]

[[example]]
name = "changeset"
path = "examples/changeset/main.rs"

[[example]]
name = "eager_loading"
path = "examples/eager_loading/main.rs"

[[example]]
name = "pg_client"
path = "examples/pg_client/main.rs"

[[example]]
name = "update_model"
path = "examples/update_model/main.rs"

[[example]]
name = "sql_builder"
path = "examples/sql_builder/main.rs"

[[example]]
name = "insert_many"
path = "examples/insert_many/main.rs"

[[example]]
name = "insert_many_array"
path = "examples/insert_many_array/main.rs"

[[example]]
name = "upsert"
path = "examples/upsert/main.rs"

[[example]]
name = "write_graph"
path = "examples/write_graph/main.rs"

[[example]]
name = "monitoring"
path = "examples/monitoring/main.rs"

[[example]]
name = "statement_cache"
path = "examples/statement_cache/main.rs"
required-features = ["check"]

[[example]]
name = "jsonb"
path = "examples/jsonb/main.rs"

[[example]]
name = "fetch_semantics"
path = "examples/fetch_semantics/main.rs"

[[example]]
name = "query_params"
path = "examples/query_params/main.rs"
required-features = ["derive"]

[[example]]
name = "streaming"
path = "examples/streaming/main.rs"

[[example]]
name = "listen_notify"
path = "examples/listen_notify/main.rs"

[[example]]
name = "keyset_pagination"
path = "examples/keyset_pagination/main.rs"

[[example]]
name = "keyset_pagination_multi"
path = "examples/keyset_pagination_multi/main.rs"

[[example]]
name = "optimistic_locking"
path = "examples/optimistic_locking/main.rs"

[[example]]
name = "pg_enum"
path = "examples/pg_enum/main.rs"

[[example]]
name = "pg_range"
path = "examples/pg_range/main.rs"

[[example]]
name = "pg_composite"
path = "examples/pg_composite/main.rs"

[[example]]
name = "savepoint"
path = "examples/savepoint/main.rs"

[[example]]
name = "transaction_options"
path = "examples/transaction_options/main.rs"

[[example]]
name = "bulk_operations"
path = "examples/bulk_operations/main.rs"

[[example]]
name = "cte_queries"
path = "examples/cte_queries/main.rs"

[[example]]
name = "composite_primary_key"
path = "examples/composite_primary_key/main.rs"

[[example]]
name = "productized_limits"
path = "examples/productized_limits/main.rs"

[[example]]
name = "input_as_nested_option"
path = "examples/input_as_nested_option/main.rs"

[[example]]
name = "query_params_multi_ops"
path = "examples/query_params_multi_ops/main.rs"

[[example]]
name = "bulk_optimistic_locking"
path = "examples/bulk_optimistic_locking/main.rs"
